# finalproj-spatialkeyframing

./: .gitignore  CMakeLists.txt  Gauss.h  Ogre.h  RadialBasisFunction.cpp  RadialBasisFunction.h  SKInterpolator.cpp  SKInterpolator.h  SpatialKeyframing.cpp  SpatialKeyframing.h  main.cpp
animate/: package-lock.json  package.json
animate/src/: App.js
animate/src/assets/: scene.gltf
animate/src/assets/static-3d-assets/: README.md
animate/src/assets/static-3d-assets/fbx/ashe/source/: Mesh_Ashe_Beautyshot.fbx
animate/src/assets/static-3d-assets/gtlf/concrete_ball/: scene.gtlf
animate/src/assets/static-3d-assets/gtlf/ironman/: scene.gltf
animate/src/assets/static-3d-assets/gtlf/pikmin/: scene.gltf
animate/src/assets/static-3d-assets/gtlf/sonic/: explore.ipynb  scene.gltf
frontend/: pose.py  ui.py
include/OGRE/: OgreBuildSettings.h  OgreComponents.h
include/OGRE/Overlay/: imconfig.h
include/OGRE/Plugins/GLSLang/: OgreGLSLangProgramManagerExports.h
include/OGRE/Plugins/RsImageCodec/: OgreRsImageCodecExports.h
include/OGRE/RenderSystems/Vulkan/: OgreVulkanExports.h
ogre-13.6.4/Components/Bites/include/: OgreApplicationContextBase.h  OgreSGTechniqueResolverListener.h  OgreStaticPluginLoader.h
ogre-13.6.4/Components/RTShaderSystem/include/: OgreShaderExIntegratedPSSM3.h  OgreShaderFFPTexturing.h  OgreShaderFunctionAtom.h  OgreShaderGenerator.h  OgreShaderParameter.h  OgreShaderPrerequisites.h  OgreShaderProgramManager.h  OgreShaderProgramSet.h  OgreShaderProgramWriter.h  OgreShaderScriptTranslator.h
ogre-13.6.4/OgreMain/include/: Ogre.h
